--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,39 @@
+# Dependencies
 node_modules/
+
+# Build outputs
 dist/
 server/
+.vercel/
+.netlify/
+
+# System files
 .DS_Store
 *.local
-tsconfig.tsbuildinfo
-bun.lock
+Thumbs.db
 
-# Tool caches
-.agent2linear/
+# TypeScript
+tsconfig.tsbuildinfo
+
+# Lock files (using npm)
+bun.lock
+yarn.lock
+pnpm-lock.yaml
+
+# Private planning documents (not for public repo)
+_private/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+npm-debug.log*
